# dicephrase

./: .gitignore  .size-snapshot.txt  Dockerfile.ocaml  README.md  _headers  bsconfig.json  dicephrase.opam  dicephrase.opam.locked  docker-compose.www.yml  dune  dune-project  index.html  native.opam.locked  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  server.opam.locked  tsconfig.json  vite.config.ts
.github/workflows/: cli-bin.yml  cli.yml  node.yml  ocaml.yml  pages-deployment.yaml  rust.yml
apps/api/: package.json  playwright.config.ts  tsconfig.json  vite.config.ts  wrangler.toml
apps/cli/: README.md  build-deps.ts  import-map.json  make.ts
apps/e2e/: package.json  playwright.config.ts
apps/main/: .eslintignore  .size-snapshot.txt  README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/main-cli/: .gitignore  README.md  build-deps.ts  make.sh  make.ts  tsconfig.json
apps/main-e2e/: package.json
apps/main-worker/: make.js  package.json  tsconfig.json  wrangler.toml
apps/node/: package.json  server.mjs
apps/ocaml/: Dockerfile.ocaml  Dockerfile.ocaml.dockerignore  README.md  fly.toml  package.json  tsconfig.json  vite.config.ts
apps/ocaml/lib/native/: dune  native.ml  native.mli  native.opam
apps/rusti/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.http-server  fly.toml  (+1 more)
e2e/: generate.spec.ts
public/: sw.js
scripts/: cp.js  crit.ts  make-server.js  make-sw.js  make-sw.ts  prerender.js  prerender.ts  sfs.js  walk.js
src/: app.css.ts  app.tsx  global.d.ts  main-ssg.tsx  main.tsx  offline-entry.ts
src/sw/: sw.ts  (+1 more)
(+240 files in other folders)
